--- a/public/templates/users.html
+++ b/public/templates/users.html
@@ -1,7 +1,4 @@
 <h1>Users</h1>
 
-<p>sanity 1</p>
-<p>{{ testScope }}</p>
-
-<p>sanity 2</p>
-<p>{{ users.controllerAsTest }}</p>
+<p>sanity</p>
+<p>{{ list }}</p>
